enforce_statfs must be set to 0.
While a value of 1 worked for me the zfs(8) manpage clearly states
"the jail needs the enforce_statfs parameter set to 0".

--- a/files/jail2.in
+++ b/files/jail2.in
@@ -12,7 +12,7 @@
 # To manage ZFS datasets within a jail the dataset must have
 # set the parameter "jailed" to 1. Additionally the jail must
 # have set the proberties "allow.mount", "allow.mount.zfs"
-# and "enforce_statfs" to value lesser than 2.
+# and "enforce_statfs" to 0.
 
 # PROVIDE: jail
 # REQUIRE: LOGIN cleanvar
